--- a/app/assets/stylesheets/framework/mixins.scss
+++ b/app/assets/stylesheets/framework/mixins.scss
@@ -396,3 +396,14 @@
   width: $gl-font-size * $code-line-height * 0.9;
   height: $gl-font-size * $code-line-height * 0.9;
 }
+
+@mixin avatar-counter($border-radius: 1em) {
+  background-color: $gray-darkest;
+  color: $white-light;
+  border: 1px solid $gray-normal;
+  border-radius: $border-radius;
+  font-family: $regular-font;
+  font-size: 9px;
+  line-height: 16px;
+  text-align: center;
+}
