--- a/app/assets/stylesheets/pages/diff.scss
+++ b/app/assets/stylesheets/pages/diff.scss
@@ -676,7 +676,7 @@ table.code {
 
 .diff-comments-more-count,
 .diff-notes-collapse {
-  @extend .avatar-counter;
+  @include avatar-counter(50%);
 }
 
 .diff-notes-collapse {
